# InnoLab-Raspberry-Pi-Arcade-Game

./: .gitignore  CMakeLists.txt  README.md
documentation/: 26_InnovationLab_Projektantrag_Petz_Arcade (4).docx  docs_todo.docx  lookup_everything_here.md
documentation/about_the_code/: compilation_commands.md
src/: CMakeLists.txt  core.cpp  core.h  game.cpp  game.h  libretro.h  pong.cpp  pong.h  skeletor.c
